# taAnalysis

./: .gitignore  README.md  pyproject.toml  runMyAnalysis.py  utils.py
analysis/: config.py  dataFrameAnalysis.py  dataFrameAnalyzer.py  example_analysis.py  userFunctions.py  utils.py
config/: analysis_template.yaml  txhybrid_config.yaml  utils.py
config/detectors/: tax4_north_config.yaml  tax4_south_config.yaml
my_analysis/: analysis_template.yaml  txHybridComposition.yaml
rdf_analyzer/: utils.py
src/: prqt2ml.py  rt2npz.py  runMyAnalysis.py  tadf_run.py
src/config/detectors/: tale_config.yaml  tasd_main_config.yaml
src/my_analysis/: analysis_template.yaml  txHybridComposition.yaml
src/rdf_analyzer/: config_manager.py  data_frame_analyzer.py  data_frame_manager.py  histogram_manager.py  library_manager.py  utils.py
