[project.scripts]
runMyAnalysis = "src.runMyAnalysis:main"

[project]
name = "taAnalysis"
version = "1.0.0"
description = "A simple, easy-to-use interface for Telescope Array (TA) data analysis."
requires-python = ">=3.8"
dependencies = [
    "pyyaml",
    "colorlog"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
