[project]
name = "taAnalysis"
version = "1.0.0"
description = "An easy-to-use interface for HEP data analysis using ROOT's RDataFrame."
requires-python = ">=3.8"
dependencies = [
    "pyyaml",
    "colorlog"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
runMyAnalysis = "src.runMyAnalysis:main"
rt2npz = "src.rt2npz:main"

[tool.setuptools]
packages = ["src", "src.config", "src.library", "src.my_analysis", "src.rdf_analyzer"]
